tests/compile-fail/integration__integration__general__local_string.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: non-const string variable
   ┌─ <input>:29:9
   │
29 │         string x = "hi";
   │         ^^^^^^ only possible for const vars


